--- a/src/index.css
+++ b/src/index.css
@@ -96,3 +96,9 @@ a {
     width: 200px;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .container-abs {
+    display: none !important;
+  }
+}
